prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/rangeloop2.diag.txt
ERROR: too many expressions separated by comma in 'for (variable: [from,] to [, step])' - loop
testData/diagnostics/rangeloop2.nut.txt:3:18

for (i : a, b, s, g) {
                  ^
    println("ERROR loop 2")


